<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoteEverything</string>
    <string name="setting_activity_name">设置</string>
    <string name="CheckMoreActivity_name">计划详细信息</string>
    <string name="ModifyDoItem_Activity_name">修改执行项</string>
    <string name="TagActivity_name">类型选择</string>
    <string name="AddDoItem_Activity_name">添加执行项</string>
    <string name="DialogActivity_name">计划提醒</string>
    <string name="AddLittleTagActiviity_name">添加小类型</string>
    <string name="AddBigTagActiviity_name">添加大类</string>
    <string name="planTagActivity_name">选择类型</string>
    <string name="AddPlanActivity_name">添加计划</string>
    <string name="BackUpActivity_name">备份</string>
    <string name="RestoreActivity_name">还原</string>
    
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_home">首页</string>
    <string name="text_plan">计划</string>
    <string name="text_do">执行</string>
    <string name="text_check">反馈</string>
    <string name="text_set">设置</string>
    <string name="text_more">更多</string>
    <string name="text_quit">退出</string>
    <string name="text_help">帮助</string>
    <string name="text_backup">备份</string>
    <string name="text_restore">还原</string>
    <string name="btn_text_start">开始</string>
    <string name="btn_text_stop">停止</string>
     <string name="btn_text_continue">继续</string>
    <string name="btn_text_finish">完成</string>
    <string name="btn_text_give_up">放弃</string>
    <string name="btn_text_modify">修改</string>
    <string name="btn_text_add_plan">添加</string>
    <string name="btn_text_plan_check">查看</string>
    
    <string name="text_addplan_title">标题</string>
    <string name="text_addplan_content">内容</string>
    <string name="text_addplan_btn_save">保存</string>
    <string name="text_addplan_btn_giveup">放弃</string>
    <string name="text_add_plantime_textview">60</string>
    <string name="text_add_addbigtag_textview">增加大类</string>
    <string name="text_add_addlittletag_textview">增加小类</string>
    <string name="text_add_addtag_savebtn">确定</string>
    <string name="text_add_addtag_nobtn">取消</string>
    <string name="text_add_begintime">开始开始</string>
    <string name="text_add_usetime">计划用时</string>
    <string name="text_add_realbegintime">实际开始</string>
    <string name="text_add_realusetime">实际用时</string>
    <string name="text_add_selecttag">选择类型</string>
    <string name="text_checkplan_back">返回</string>
    <string name="text_checkplan_status">计划状态</string>
    
    <string name="w_text_weather">天气：</string>
    <string name="w_text_wind">风力：</string>
    <string name="contentDescription">weather_icon</string>
    <string name="w_content_text">\t世事忙忙如水流，休将名利挂心头。粗茶淡饭随缘过，富贵荣华莫强求。</string>
    <string name="w_text_update">更新天气</string>
    
    <string name="do_btn_additem">添加条目</string>
    <string name="do_iv_desc"></string>
    <string name="do_tv_begintime_desc">开始时间</string>
    <string name="do_tv_endtime_desc">结束时间</string>
    <string name="do_tv_content_desc">内容</string>
    <string name="do_tv_tag">类型</string>
    <string name="do_btn_save">保存</string>
    <string name="do_btn_giveup">放弃</string>
    
    <string name="check_btn_plan">计划</string>
    <string name="check_btn_do">执行</string>
    <string name="check_btn_plantodo">计划情况</string>
    <string name="check_btn_actualltodo">实际情况</string>
    
    <string name="setting_tv_usercenter">用户中心</string>
    <string name="setting_tv_localpasswd">本地口令</string>
    <string name="setting_tv_tagmanager">类型管理</string>
    <string name="setting_tv_music">提醒音乐</string>
    <string name="setting_tv_clear">清除数据</string>
    
    <string name="backup_btn_localbackup">本地备份</string>
    <string name="backup_btn_yunbackup">云备份</string>
    <string name="restore_btn_localrestore">本地还原</string>
    <string name="restore_btn_yunrestore">云还原</string>

</resources>
