<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w_bg"
    android:orientation="vertical" >

    <!-- 今天天气 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
         android:baselineAligned="false">

        <!-- 显示具体天气信息 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <!-- 显示地址 -->

            <TextView
                android:id="@+id/w_addr_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/w_weather_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:text="@string/w_text_weather"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/w_wind_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:text="@string/w_text_wind"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

        </LinearLayout>

        <!-- 显示天气图标 -->

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
            <ImageView 
                android:id="@+id/w_icon_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/w_undefined"
                android:contentDescription="@string/contentDescription" 
                />
             <TextView 
                android:id="@+id/w_tem_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_marginRight="10dp"
                android:layout_gravity="bottom|right"
                />
            
           

        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/w_content_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
    	android:layout_marginBottom="10dp"
    	android:text="@string/w_content_text"
         />

    <!-- 未来三天天气 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" 
        android:layout_margin="10dp"
        android:background="#22FFFFFF"
        android:baselineAligned="false"
        >

        <LinearLayout
            android:id="@+id/w_futrue1_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/w_futrue2_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/w_futrue3_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>
        
    </LinearLayout>
        

    <TextView
        android:id="@+id/w_update_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#22FFFFFF"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/w_text_update" />

</LinearLayout>